--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- Encabezado -->
 	<header>
 		<figure>MARCA</figure>
-		<h1>SOLES DEL PIE DE MONTE</h1>
+		<h1>SOLES DEL PIEDEMONTE</h1>
 	</header>
 	<!-- SLIDE -->
 	<hgroup>
@@ -34,7 +34,7 @@
 
 	</article>
 	<!-- Pie de Página -->
-	<footer></footer>
+	<footer>Soles de Piedemonte 261230444 solesdepiedemonte@gmail.com</footer>
 
 
 	
