--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<link rel="stylesheet" href="estilos.css">
+	<script href="funciones.js"></script>
 </head>
 <body>
 	<!-- Encabezado -->
@@ -11,20 +13,20 @@
 		<h1>SOLES DEL PIE DE MONTE</h1>
 	</header>
 	<!-- SLIDE -->
-	<hgroup>
-		<figure id="slide"></figure>
-		<figcaption id="epigrafe_slide"></figcaption>
-	</hgroup>
+	<figure id="slide"></figure>
+	<figcaption id="epigrafe_slide"></figcaption>
+	
 	<!-- Barra de Navegación -->
 	<nav>
-		<a href="#">Inicio</a>
-		<a href="#">Nuestra Historia</a>
-		<a href="#">Nuestros Trabajos</a>
-		<a href="#">Contacto</a>
+		<ul>
+			<li><a href="#">Inicio</a></li>
+			<li><a href="#">Nuestra Historia</a></li>
+			<li><a href="#">Nuestros Trabajos</a></li>
+			<li><a href="#">Contacto</a></li>
+		</ul>
 	</nav>
 	<!-- Descripción de la Empresa -->
 	<p id="descripcion">
-		
 	</p>
 	<!-- Descripcion y Foto  -->
 	<article>
