--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Soles del piedemonte</title>
 	<link rel="stylesheet" href="estilos.css">
 	<script href="funciones.js"></script>
 </head>
