--- a/index.html
+++ b/index.html
@@ -1,37 +1,157 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-	<meta charset="UTF-8">
-	<title>Soles del piedemonte</title>
-	<link rel="stylesheet" href="estilos.css">
-	<script href="funciones.js"></script>
-</head>
-<body>
-	<!-- Encabezado -->
-	<header>
-		<figure>MARCA</figure>
-		<h1>SOLES DEL PIEDEMONTE</h1>
-	</header>
-	<!-- Barra de Navegación -->
-	<nav>
-		<ul>
-			<li><a href="#">Inicio</a></li>
-			<li><a href="#">Nuestra Historia</a></li>
-			<li><a href="#">Nuestros Trabajos</a></li>
-			<li><a href="#">Contacto</a></li>
-		</ul>
-	</nav>
-	<!-- Descripción de la Empresa -->
-	<p id="descripcion">
-	</p>
-	<!-- Descripcion y Foto  -->
-	<article>
-		<p id="articulo"></p>
-		<figure></figure>
-		<figcaption></figcaption>
+	<head>
+		<meta charset="UTF-8">
+		<title>Soles del piedemonte</title>
+		<link rel="stylesheet" href="estilos.css">
+		<script href="funciones.js"></script>
+	</head>
 
-	</article>
-	<!-- Pie de Página -->
+	<header>
+		<img src=""></img>
+
+
+		<ul class= "menu-little">
+			<li><a href="index.html">Inicio</a></li>
+			<li><a href="nuestrahistoria.html">Nuestra Historia</a></li>
+			<li><a href="nuestrostrabajos.html">Nuestros Trabajos</a></li>
+			<li><a href="contacto.html">Contacto</a></li>
+		</ul>
+		
+	</header>
+
+	<section id="portada">
+
+		<class="slide portada"> </class>
+
+		<img src=""></img>
+
+		<ul class= "menu-big">
+
+			<li><a href="index.html">Inicio</a></li>
+			<li><a href="nuestrahistoria.html">Nuestra Historia</a></li>
+			<li><a href="nuestrostrabajos.html">Nuestros Trabajos</a></li>
+			<li><a href="contacto.html">Contacto</a></li>
+
+		</ul>
+
+	</section>
+
+	<section id="inicio">
+
+		<class="slide inicio"> </class>
+
+		<article> descripciòn de la empresa
+
+		</article>
+
+		<ul class="info-inicio">
+			
+			<li> Misión </li>
+			<li> Objetivo </li>
+		
+		</ul>
+
+
+	</section>
+
+
+	</section>
+
+	<section id="nosotros">
+
+		<class="slide nosotros"> </class>
+
+		<ul class= "info-nosotros">
+
+
+			<li> orígenes </li>
+
+
+
+			<li>participaciones</li>
+
+		
+
+
+			<li>formación profesional</li>
+
+		</ul>
+
+		<img src="fotodeellas"></img>
+
+	
+
+
+	</section>
+
+	<section id="nuestros trabajos">
+
+		<class="slide nuestros trabajos" </class>
+
+	</section>
+
+	<section id="contacto">
+
+		<class="slide contacto" </class>
+
+
+	<title>Formulario de contacto</title>
+
+	<h1>Contacto</h1>
+	<form action="" formmethod="get">
+		<fieldset>
+		<label for="user-name">Nombre:</label>
+			<input id="user-name" name="user-name" type="text" placeholder="Ingrese su nombre" required>
+	<br>
+		<label>Email:</label>
+			<input type="email" placeholder="Ingrese un correo válido" required>
+	</br>
+
+	<br>
+
+		<label>Teléfono:</label>
+			<input type= "telefono" placeholder= "261 155XXXXXX">
+	</br>
+
+	
+
+		<label>Comentario:</label>
+	<br>
+
+			<textarea rows="20" cols="100"></textarea>
+	</br>
+
+<input type="submit" value="Enviar">
+<input type="reset" value="Cancelar">
+</form>
+
+
+<h1> Encuentrenos en:  </h1> 
+
+<h1> Teléfono </h1> <p> 26149832489342 </p>
+
+<h1> Email </h1> <p> solesdepiedemonte@gmail.com</p>
+<h1> ¿Dónde estamos? </h1> 
+	
+	<br>	
+		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d214331.5185097047!2d-68.81377905!3d-32.92644824999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1411529009965" width="400" height="300" frameborder="0" ></iframe>
+	</br>
+
+	</section>
+
+
+
+
+
+
+
+
+
+
+
+<
+
 	<footer>Soles de Piedemonte 261230444 solesdepiedemonte@gmail.com</footer>
 
 
