--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 		<ul class= "menu-little">
-			<li><a href="index.html">Inicio</a></li>
+			<li><a href="#inicio">Inicio</a></li>
 			<li><a href="nuestrahistoria.html">Nuestra Historia</a></li>
 			<li><a href="nuestrostrabajos.html">Nuestros Trabajos</a></li>
 			<li><a href="contacto.html">Contacto</a></li>
