enlazando menúes con sections

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
 		<ul class= "menu-little">
 			<li><a href="#inicio">Inicio</a></li>
-			<li><a href="nuestrahistoria.html">Nuestra Historia</a></li>
-			<li><a href="nuestrostrabajos.html">Nuestros Trabajos</a></li>
-			<li><a href="contacto.html">Contacto</a></li>
+			<li><a href="#nuestrahistoria">Nuestra Historia</a></li>
+			<li><a href="#nuestostrabajos">Nuestros Trabajos</a></li>
+			<li><a href="#contacto">Contacto</a></li>
 		</ul>
 		
 	</header>
@@ -28,10 +28,10 @@
 
 		<ul class= "menu-big">
 
-			<li><a href="index.html">Inicio</a></li>
-			<li><a href="nuestrahistoria.html">Nuestra Historia</a></li>
-			<li><a href="nuestrostrabajos.html">Nuestros Trabajos</a></li>
-			<li><a href="contacto.html">Contacto</a></li>
+			<li><a href="#inicio">Inicio</a></li>
+			<li><a href="#nuestrahistoria">Nuestra Historia</a></li>
+			<li><a href="#nuestrostrabajos">Nuestros Trabajos</a></li>
+			<li><a href="#contacto">Contacto</a></li>
 
 		</ul>
 
@@ -58,11 +58,11 @@
 
 	</section>
 
-	<section id="nosotros">
+	<section id="nuestrahistoria">
 
-		<class="slide nosotros"> </class>
+		<class="slide nuestrahistoria"> </class>
 
-		<ul class= "info-nosotros">
+		<ul class= "info-nuestrahistoria">
 
 
 			<li> orígenes </li>
@@ -85,9 +85,9 @@
 
 	</section>
 
-	<section id="nuestros trabajos">
+	<section id="nuestrostrabajos">
 
-		<class="slide nuestros trabajos" </class>
+		<class="slide nuestrostrabajos" </class>
 
 	</section>
 
