agregando títulos a los sections

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
 
 		<class="slide inicio"> </class>
 
-		<article> descripciòn de la empresa
-
+		<article> descripción de la empresa
 		</article>
 
 		<ul class="info-inicio">
@@ -61,19 +60,12 @@
 	<section id="nuestrahistoria">
 
 		<class="slide nuestrahistoria"> </class>
+			<h1>Nuestra Historia</h1>
 
 		<ul class= "info-nuestrahistoria">
 
-
-			<li> orígenes </li>
-
-
-
+			<li>orígenes </li>
 			<li>participaciones</li>
-
-		
-
-
 			<li>formación profesional</li>
 
 		</ul>
@@ -88,6 +80,7 @@
 	<section id="nuestrostrabajos">
 
 		<class="slide nuestrostrabajos" </class>
+		<h1>Nuestros Trabajos</h1>
 
 	</section>
 
