Reescribiendo código de section contacto
Cambiando los h1 del código por una ul

--- a/index.html
+++ b/index.html
@@ -119,35 +119,19 @@
 <input type="reset" value="Cancelar">
 </form>
 
+		<ul class= "info-contacto">
 
-<h1> Encuentrenos en:  </h1> 
+			<li>Teléfono: 26149832489342</li>
+			<li>Email: solesdepiedemonte@gmail.com</li>
+			<li>¿Dónde estamos? <br>	
+			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d214331.5185097047!2d-68.81377905!3d-32.92644824999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1411529009965" width="400" height="300" frameborder="0" ></iframe>
+			</br></li>
 
-<h1> Teléfono </h1> <p> 26149832489342 </p>
-
-<h1> Email </h1> <p> solesdepiedemonte@gmail.com</p>
-<h1> ¿Dónde estamos? </h1> 
-	
-	<br>	
-		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d214331.5185097047!2d-68.81377905!3d-32.92644824999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1411529009965" width="400" height="300" frameborder="0" ></iframe>
-	</br>
+		</ul>
 
 	</section>
 
-
-
-
-
-
-
-
-
-
-
-<
-
 	<footer>Soles de Piedemonte 261230444 solesdepiedemonte@gmail.com</footer>
 
-
-	
 </body>
 </html>
