--- a/nuestrostrabajos.html
+++ b/nuestrostrabajos.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Nuestros Trabajos</title>
-	<link rel="stylesheet" href="estilos.css">
+	<link rel="stylesheet" href="css/estilos.css">
 	<script href="funciones.js"></script>
 </head>
 
