--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<header>
-		<img src=""></img>
+		<img src="" alt="">
 
 
 		<ul class= "menu-little">
@@ -20,11 +20,9 @@
 		
 	</header>
 
-	<section id="portada">
+	<section id="portada" class="slide portada">
 
-		<class="slide portada"> </class>
-
-		<img src=""></img>
+		<img src="" alt="">
 
 		<ul class= "menu-big">
 
