--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
 
 	</section>
 
-	<section id="nuestrahistoria">
-
-		<class="slide nuestrahistoria"> </class>
+	<section id="nuestrahistoria" class="slide nuestrahistoria">
 			<h1>Nuestra Historia</h1>
 
 		<ul class= "info-nuestrahistoria">
@@ -68,26 +66,22 @@
 
 		</ul>
 
-		<img src="fotodeellas"></img>
+		<img src="fotodeellas">
 
 	
 
 
 	</section>
 
-	<section id="nuestrostrabajos">
-
-		<class="slide nuestrostrabajos" </class>
+	<section id="nuestrostrabajos" class="slide nuestrostrabajos">
 		<h1>Nuestros Trabajos</h1>
 
 	</section>
 
-	<section id="contacto">
-
-		<class="slide contacto" </class>
+	<section id="contacto" class="slide contacto">
 
 
-	<title>Formulario de contacto</title>
+	<h1>Formulario de contacto</h1>
 
 	<h1>Contacto</h1>
 	<form action="" formmethod="get">
@@ -97,13 +91,13 @@
 	<br>
 		<label>Email:</label>
 			<input type="email" placeholder="Ingrese un correo válido" required>
-	</br>
+
 
 	<br>
 
 		<label>Teléfono:</label>
 			<input type= "telefono" placeholder= "261 155XXXXXX">
-	</br>
+	
 
 	
 
@@ -111,11 +105,11 @@
 	<br>
 
 			<textarea rows="20" cols="100"></textarea>
-	</br>
 
+		</fieldset>
 <input type="submit" value="Enviar">
 <input type="reset" value="Cancelar">
-</form>
+
 
 		<ul class= "info-contacto">
 
@@ -126,7 +120,7 @@
 			</br></li>
 
 		</ul>
-
+	</form>
 	</section>
 
 	<footer>Soles de Piedemonte 261230444 solesdepiedemonte@gmail.com</footer>
