arreglando errores de validador

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Soles del piedemonte</title>
 		<link rel="stylesheet" href="estilos.css">
-		<script href="funciones.js"></script>
+		<script href="funciones.js"</script>
 	</head>
 
 	<header>
@@ -22,7 +22,6 @@
 
 	<section id="portada" class="slide portada">
 
-		<img src="" alt="">
 
 		<ul class= "menu-big">
 
@@ -35,29 +34,18 @@
 
 	</section>
 
-	<section id="inicio">
-
-		<class="slide inicio"> </class>
-
-		<article> descripción de la empresa
+	<section id="inicio" class="slide inicio">
+		<article> Descripción de la empresa
 		</article>
-
-		<ul class="info-inicio">
-			
+		<ul class="info-inicio">			
 			<li> Misión </li>
 			<li> Objetivo </li>
-		
 		</ul>
-
-
 	</section>
 
 
-	</section>
+	<section id="nuestrahistoria" class="slide nuestrahistoria">
 
-	<section id="nuestrahistoria">
-
-		<class="slide nuestrahistoria"> </class>
 			<h1>Nuestra Historia</h1>
 
 		<ul class= "info-nuestrahistoria">
@@ -67,17 +55,12 @@
 			<li>formación profesional</li>
 
 		</ul>
-
 		<img src="fotodeellas"></img>
-
 	
-
-
 	</section>
 
-	<section id="nuestrostrabajos">
+	<section id="nuestrostrabajos" class="slide nuestrostrabajos">
 
-		<class="slide nuestrostrabajos" </class>
 		<h1>Nuestros Trabajos</h1>
 
 	</section>
