más errores de validador

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<title>Soles del piedemonte</title>
 		<link rel="stylesheet" href="estilos.css">
-		<script href="funciones.js"</script>
+		<script href="funciones.js"></script>
 	</head>
 
 	<header>
@@ -44,14 +44,14 @@
 	</section>
 
 
-<<<<<<< HEAD
+
 	<section id="nuestrahistoria" class="slide nuestrahistoria">
 
-=======
+
 	</section>
 
 	<section id="nuestrahistoria" class="slide nuestrahistoria">
->>>>>>> origin/master
+
 			<h1>Nuestra Historia</h1>
 
 		<ul class= "info-nuestrahistoria">
@@ -61,21 +61,16 @@
 			<li>formación profesional</li>
 
 		</ul>
-<<<<<<< HEAD
-		<img src="fotodeellas"></img>
-=======
 
+		<img src="fotodeellas"></img>
 		<img src="fotodeellas">
 
->>>>>>> origin/master
+
 	
 	</section>
 
 	<section id="nuestrostrabajos" class="slide nuestrostrabajos">
-<<<<<<< HEAD
 
-=======
->>>>>>> origin/master
 		<h1>Nuestros Trabajos</h1>
 
 	</section>
@@ -91,17 +86,13 @@
 		<label for="user-name">Nombre:</label>
 			<input id="user-name" name="user-name" type="text" placeholder="Ingrese su nombre" required>
 	<br>
+
 		<label>Email:</label>
 			<input type="email" placeholder="Ingrese un correo válido" required>
-
-
 	<br>
 
 		<label>Teléfono:</label>
 			<input type= "telefono" placeholder= "261 155XXXXXX">
-	
-
-	
 
 		<label>Comentario:</label>
 	<br>
