más más errores de validador

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 
 	<header>
-		<img src="" alt="">
+		<img src="fotodeellas"></img>
 
 
 		<ul class= "menu-little">
@@ -43,11 +43,7 @@
 		</ul>
 	</section>
 
-
-
-	<section id="nuestrahistoria" class="slide nuestrahistoria">
-
-
+	<section id="nuestrostrabajos" class="slide nuestrostrabajos">
 	</section>
 
 	<section id="nuestrahistoria" class="slide nuestrahistoria">
@@ -63,9 +59,6 @@
 		</ul>
 
 		<img src="fotodeellas"></img>
-		<img src="fotodeellas">
-
-
 	
 	</section>
 
@@ -81,7 +74,7 @@
 	<h1>Formulario de contacto</h1>
 
 	<h1>Contacto</h1>
-	<form action="" formmethod="get">
+	<form action="formmethod"="get">
 		<fieldset>
 		<label for="user-name">Nombre:</label>
 			<input id="user-name" name="user-name" type="text" placeholder="Ingrese su nombre" required>
@@ -110,7 +103,7 @@
 			<li>Email: solesdepiedemonte@gmail.com</li>
 			<li>¿Dónde estamos? <br>	
 			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d214331.5185097047!2d-68.81377905!3d-32.92644824999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1411529009965" width="400" height="300" frameborder="0" ></iframe>
-			</br></li>
+			</li>
 
 		</ul>
 	</form>
