últimos ajustes desde el validador

--- a/index.html
+++ b/index.html
@@ -60,21 +60,11 @@
 
 		<img src="fotodeellas"></img>
 	
-	</section>
-
-	<section id="nuestrostrabajos" class="slide nuestrostrabajos">
-
-		<h1>Nuestros Trabajos</h1>
-
-	</section>
 
 	<section id="contacto" class="slide contacto">
-
-
-	<h1>Formulario de contacto</h1>
-
 	<h1>Contacto</h1>
-	<form action="formmethod"="get">
+
+	<form action="formmethod"= get>
 		<fieldset>
 		<label for="user-name">Nombre:</label>
 			<input id="user-name" name="user-name" type="text" placeholder="Ingrese su nombre" required>
