--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 	</section>
 
 	<section id="inicio" class="slide inicio">
+		<h1>Inicio</h1>
+
 		<article> Descripción de la empresa
 		</article>
 		<ul class="info-inicio">			
@@ -44,11 +46,12 @@
 	</section>
 
 	<section id="nuestrostrabajos" class="slide nuestrostrabajos">
+		<h1>Nuestros Trabajos</h1>
 	</section>
 
 	<section id="nuestrahistoria" class="slide nuestrahistoria">
 
-			<h1>Nuestra Historia</h1>
+		<h1>Nuestra Historia</h1>
 
 		<ul class= "info-nuestrahistoria">
 
@@ -62,7 +65,7 @@
 	
 
 	<section id="contacto" class="slide contacto">
-	<h1>Contacto</h1>
+		<h1>Contacto</h1>
 
 	<form action="formmethod"= get>
 		<fieldset>
@@ -87,16 +90,12 @@
 <input type="reset" value="Cancelar">
 
 
-		<ul class= "info-contacto">
+			<p class="vcard"> </p>
+			<a class="fn soles de pedemonte" href="url contacto soles" title="Información de contacto Soles del Pedemonte"><span class="organization-name">Soles de Pedemonte</span>
 
-			<li>Teléfono: 26149832489342</li>
-			<li>Email: solesdepiedemonte@gmail.com</li>
-			<li>¿Dónde estamos? <br>	
-			<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d214331.5185097047!2d-68.81377905!3d-32.92644824999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1411529009965" width="400" height="300" frameborder="0" ></iframe>
-			</li>
-
-		</ul>
-	</form>
+			<span class="tel">Teléfono: <span class="value">+54296149832489342</span><br>
+			<span class=”email”> Email: <span class="value">solesdepedemonte@gmail.com</span><br>
+			<a class="location url"href=""https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d214331.5185097047!2d-68.81377905!3d-32.92644824999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1411529009965></a>
 	</section>
 
 	<footer>Soles de Piedemonte 261230444 solesdepiedemonte@gmail.com</footer>
