--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 		<meta charset="UTF-8">
 		<title>Soles del piedemonte</title>
 		<link rel="stylesheet" href="estilos.css">
-		<script href="funciones.js"></script>
+		<script src="funciones.js"></script>
 	</head>
 
 	<header>
-		<img src="fotodeellas"></img>
+		<img src="fotodeellas" alt "Foto del equipo de trabajo">
 
 
 		<ul class= "menu-little">
@@ -37,7 +37,7 @@
 	<section id="inicio" class="slide inicio">
 		<h1>Inicio</h1>
 
-		<article> Descripción de la empresa
+		<article> <h2> Descripción de la empresa </h2>
 		</article>
 		<ul class="info-inicio">			
 			<li> Misión </li>
@@ -61,13 +61,13 @@
 
 		</ul>
 
-		<img src="fotodeellas"></img>
+		<img src="fotodiplomas" alt "Foto de los diplomas">
 	
 
 	<section id="contacto" class="slide contacto">
 		<h1>Contacto</h1>
 
-	<form action="formmethod"= get>
+	<form action="formmethod"=get>
 		<fieldset>
 		<label for="user-name">Nombre:</label>
 			<input id="user-name" name="user-name" type="text" placeholder="Ingrese su nombre" required>
@@ -78,7 +78,7 @@
 	<br>
 
 		<label>Teléfono:</label>
-			<input type= "telefono" placeholder= "261 155XXXXXX">
+			<input type= "telefono" placeholder= "261 155000000">
 
 		<label>Comentario:</label>
 	<br>
@@ -95,7 +95,7 @@
 
 			<span class="tel">Teléfono: <span class="value">+54296149832489342</span><br>
 			<span class=”email”> Email: <span class="value">solesdepedemonte@gmail.com</span><br>
-			<a class="location url"href=""https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d214331.5185097047!2d-68.81377905!3d-32.92644824999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1411529009965></a>
+			<a class="location url" href="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d214331.5185097047!2d-68.81377905!3d-32.92644824999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1411529009965></a>
 	</section>
 
 	<footer>Soles de Piedemonte 261230444 solesdepiedemonte@gmail.com</footer>
