--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	</head>
 
 	<header>
-		<img src="fotodeellas" alt "Foto del equipo de trabajo">
-
+		<img src="fotodeellas.jpg" alt="Foto del equipo de trabajo" />
+		
 
 		<ul class= "menu-little">
 			<li><a href="#inicio">Inicio</a></li>
@@ -61,7 +61,8 @@
 
 		</ul>
 
-		<img src="fotodiplomas" alt "Foto de los diplomas">
+		<img src="fotodiplomas.jpg" alt="Foto de los diplomas"/>
+		
 	
 
 	<section id="contacto" class="slide contacto">
