Arreglando enlace desde html con css
cambiando el nombre del documento css por uno más genérico

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Soles del piedemonte</title>
-		<link rel="stylesheet" href="estilos.css">
+		<link rel="stylesheet" type="text/css" href="css/styles.css">
+
 		<script src="funciones.js"></script>
 	</head>
 
