--- a/index.html
+++ b/index.html
@@ -70,36 +70,40 @@
 	<section id="contacto" class="slide contacto">
 		<h1>Contacto</h1>
 
-	<form action="formmethod">
-		<fieldset>
-		<label for="user-name">Nombre:</label>
-			<input id="user-name" name="user-name" type="text" placeholder="Ingrese su nombre" required>
-	<br>
+		<form action="formmethod">
+			<fieldset>
+				<label for="user-name">Nombre:</label>
+				<input id="user-name" name="user-name" type="text" placeholder="Ingrese su nombre" required>
+				<br>
 
-		<label>Email:</label>
-			<input type="email" placeholder="Ingrese un correo válido" required>
-	<br>
+				<label>Email:</label>
+				<input type="email" placeholder="Ingrese un correo válido" required>
+				<br>
 
-		<label>Teléfono:</label>
-			<input type= "tel" placeholder= "261 155000000">
+				<label>Teléfono:</label>
+				<input type= "tel" placeholder= "261 155000000">
 
-		<label>Comentario:</label>
-	<br>
+				<label>Comentario:</label>
+				<br>
 
-			<textarea rows="20" cols="100"></textarea>
+				<textarea rows="20" cols="100"></textarea>
 
-		</fieldset>
-<input type="submit" value="Enviar">
-<input type="reset" value="Cancelar">
+			</fieldset>
+			<input type="submit" value="Enviar">
+			<input type="reset" value="Cancelar">
 
 
-			<p class="vcard"> </p>
-			<a class="fn soles de pedemonte" href="url contacto soles" title="Información de contacto Soles del Pedemonte"><span class="organization-name">Soles de Pedemonte</span>
-
-			<span class="tel">Teléfono: <span class="value">+54296149832489342</span><br>
-			<span class="email"> Email: <span class="value">solesdepedemonte@gmail.com</span><br>
-			<a class="location url" href="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d214331.5185097047!2d-68.81377905!3d-32.92644824999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1411529009965"></a>
-	</form>
+			<div class="vcard">
+				<p> class="fn" title="Información de contacto Soles del Pedemonte">
+				<span class="organization-name">Soles de Pedemonte</span>
+				</p>
+				<span class="tel">Teléfono: <span class="value">+54296149832489342</span></span>
+				<br>
+				<span class="email"> Email: <span class="value">solesdepedemonte@gmail.com</span></span>
+				<br>
+				<a class="location url" href="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d214331.5185097047!2d-68.81377905!3d-32.92644824999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1411529009965"></a>
+			</div>
+		</form>
 	</section>
 
 	<footer>Soles de Piedemonte 261230444 solesdepiedemonte@gmail.com</footer>
