--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Soles del piedemonte</title>
-		<link rel="stylesheet" type="text/css" href="css/styles.css">
-
+		<link rel="stylesheet" type="text/css" href="css/styles.css" media="screen">
+		<link href="css/stylebig.css" rel="stylesheet" type="text/css" media="screen">
+		<link href="css/stylemedium.css" rel="stylesheet" type="text/css" media="only screen and (min-width:501px) and (max-width:800px)">
+		<link href="css/stylelittle.css" rel="stylesheet" type="text/css" media="only screen and (min-width:50px) and (max-width:500px)">
 		<script src="funciones.js"></script>
 	</head>
 
