--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
 
 	<header>
-		<img src="fotodeellas.jpg" alt="Foto del equipo de trabajo" />
+		<img src="img/marcagrande.png" alt="Foto del equipo de trabajo" />
 		
 
 		<ul class= "menu-little">
