--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 		<link href="css/stylebig.css" rel="stylesheet" type="text/css" media="screen">
 		<link href="css/stylemedium.css" rel="stylesheet" type="text/css" media="only screen and (min-width:501px) and (max-width:800px)">
 		<link href="css/stylelittle.css" rel="stylesheet" type="text/css" media="only screen and (min-width:50px) and (max-width:500px)">
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
+		<link  href="http://fotorama.s3.amazonaws.com/4.6.2/fotorama.css" rel="stylesheet"> 
+		<script src="http://fotorama.s3.amazonaws.com/4.6.2/fotorama.js"></script> 
+
 		<script src="funciones.js"></script>
 	</head>
 
@@ -50,6 +54,29 @@
 
 	<section id="nuestrostrabajos" class="slide nuestrostrabajos">
 		<h1>Nuestros Trabajos</h1>
+
+
+		<div class="fotorama"
+    		 data-auto="false">
+ 		 <img src="img/fotos1/faldaroja.jpg">
+  		 <img src="img/fotos1/faldarojatras.jpg">
+  		 <img src="img/fotos1/sincara.jpg">
+  		 <img src="img/fotos1/vestidonena.jpg">
+
+		
+		</div>
+
+		<script type="text/javascript">
+			$(function () {
+  			$('.fotorama').fotorama();
+		});
+		</script>
+
+
+
+
+
+
 	</section>
 
 	<section id="nuestrahistoria" class="slide nuestrahistoria">
