--- a/index.html
+++ b/index.html
@@ -16,25 +16,29 @@
 	</head>
 
 	<header>
-		<img src="img/marcagrande.png" alt="imagen_de_la_marca" />
+		<div class="marcagrande" align=center>
+		<img src="img/marcagrande.png" alt="imagen_de_la_marca" with:"400px" height="300px" >
+		</div>
 		
-
-		<ul class= "menu-little">
-			<li><a href="#inicio">Inicio</a></li>
-			<li><a href="#nuestrahistoria">Nuestra Historia</a></li>
-			<li><a href="#nuestostrabajos">Nuestros Trabajos</a></li>
-			<li><a href="#contacto">Contacto</a></li>
-		</ul>
-		
+		<div clas="containerlittle">
+		    <ul class="menu-little">
+			    <li><a href="#inicio">Inicio</a></li>
+			    <li><a href="#nuestrahistoria">Nuestra Historia</a></li>
+			    <li><a href="#nuestostrabajos">Nuestros Trabajos</a></li>
+			    <li><a href="#contacto">Contacto</a></li>
+		    </ul>
+		</div>
 	</header>
 
 	<section id="portada" class="slide portada">
-		<ul class= "menu-big">
-			<li><a href="#inicio">Inicio</a></li>
-			<li><a href="#nuestrahistoria">Nuestra Historia</a></li>
-			<li><a href="#nuestrostrabajos">Nuestros Trabajos</a></li>
-			<li><a href="#contacto">Contacto</a></li>
-		</ul>
+		<div class="containerbig">
+		    <ul class="menu-big" align=center>
+			    <li><a href="#inicio">Inicio</a></li>
+			    <li><a href="#nuestrahistoria">Nuestra Historia</a></li>
+			    <li><a href="#nuestrostrabajos">Nuestros Trabajos</a></li>
+			    <li><a href="#contacto">Contacto</a></li>
+		    </ul>
+	    </div>
 	</section>
 
 	<section id="inicio" class="slide inicio">
