--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
 	<header>
 		<div class="marcagrande" align=center>
-		<img src="img/marcagrande.png" alt="imagen_de_la_marca" with:"400px" height="300px" >
+		<img src="img/marcagrande.png" alt="imagen_de_la_marca" with:"350px" height="250px" >
 		</div>
 		
 		<div clas="containerlittle">
 		    <ul class="menu-little">
 			    <li><a href="#inicio">Inicio</a></li>
 			    <li><a href="#nuestrahistoria">Nuestra Historia</a></li>
-			    <li><a href="#nuestostrabajos">Nuestros Trabajos</a></li>
+			    <li><a href="#nuestrostrabajos">Nuestros Trabajos</a></li>
 			    <li><a href="#contacto">Contacto</a></li>
 		    </ul>
 		</div>
@@ -42,12 +42,11 @@
 	</section>
 
 	<section id="inicio" class="slide inicio">
-		<h1>Inicio</h1>
-		<article> <h2> Descripción de la empresa </h2>
+		<article class="descripcion"> <h2> Descripción de la empresa </h2>
 		</article>
 		<ul class="info-inicio">			
-			<li> Misión </li>
-			<li> Objetivo </li>
+			<li class="mision"> Misión </li>
+			<li class="Visión"> Visión </li>
 		</ul>
 	</section>
 
