agregando css a menu-little

--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
 
 	<header>
 		<div class="marcagrande" align=center>
-		<img src="img/marcagrande.png" alt="imagen_de_la_marca" with:"350px" height="250px" >
+			<img src="img/marcagrande.png" alt="imagen_de_la_marca_grande" with:"350px" height="250px" >
 		</div>
 		
 		<div clas="containerlittle">
+			<nav class="marcachica" align=center>
+				<img src="img/marcachica.png" alt="imagen_de_la_marca_chica" with:"50px" height="30px" >
+			</nav>
 		    <ul class="menu-little">
 			    <li><a href="#inicio">Inicio</a></li>
 			    <li><a href="#nuestrahistoria">Nuestra Historia</a></li>
@@ -46,7 +49,7 @@
 		</article>
 		<ul class="info-inicio">			
 			<li class="mision"> Misión </li>
-			<li class="Visión"> Visión </li>
+			<li class="vision"> Visión </li>
 		</ul>
 	</section>
 
