--- a/index.html
+++ b/index.html
@@ -59,18 +59,50 @@
 			<li>participaciones</li>
 			<li>formación profesional</li>
 		</ul>
-		<img src="fotodiplomas.jpg" alt="Foto de los diplomas"/>		
+
+		<img src="fotos Soles/adriana.jpg" alt="Adriana expositora"border="0" height="150" width="200"/>
+		<img src="fotos Soles/adrianaconreina.jpg" alt="Adriana con reina"border="0" height="150" width="200"/>
+		<img src="fotos Soles/adrianaconsr.jpg" alt="Intendente"border="0" height="150" width="200"/>
+
 	</section>
 
 	<section id="nuestrostrabajos" class="slide nuestrostrabajos">
 		<h1>Nuestros Trabajos</h1>
 			<div class="fotorama"
     			 data-auto="false">
- 			 	<img src="img/fotos1/faldaroja.jpg">
-  			 	<img src="img/fotos1/faldarojatras.jpg">
-  			 	<img src="img/fotos1/sincara.jpg">
-  			 	<img src="img/fotos1/vestidonena.jpg">		
+ 			 	<img src="img/fotos1/faldaroja.jpg"/>
+  			 	<img src="img/fotos1/faldarojatras.jpg"/>
+  			 	<img src="img/fotos1/sincara.jpg"/>
+  			 	<img src="img/fotos1/vestidonena.jpg"/>		
 			</div>
+
+		<ul class= "categorias-nuestrostrabajos">
+			<li>Alta costura</li>
+			<li>Uniformes de trabajo</li>
+			<li>Trajes para eventos</li>
+			<li>Buzos de egresados</li>
+			<li>Ropa Sport</li>
+			<li>Prendas con serigrafía</li>
+			<li>Línea Hogar
+
+				<div class="fotorama"
+    				 data-auto="false">
+ 			 		<img src="fotos Soles/toalla.jpg"/>
+  			 		<img src="fotos Soles/sabanasositos.jpg"/>
+  			 		<img src="fotos Soles/sabanasositos.jpg"/>
+  			 		<img src="fotos Soles/mantelblanco.jpg"/>		
+				</div>
+
+
+
+
+
+
+
+
+			</li>
+		<ul/>
+
 		<script type="text/javascript">
 			$(function () {
   			$('.fotorama').fotorama();
