--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 		</div>
 	</header>
 
+
+
 	<section id="portada" class="slide portada">
 		<div class="containerbig">
 		    <ul class="menu-big" align=center>
@@ -68,36 +70,53 @@
 
 	<section id="nuestrostrabajos" class="slide nuestrostrabajos">
 		<h1>Nuestros Trabajos</h1>
-			<div class="fotorama"
-    			 data-auto="false">
- 			 	<img src="img/fotos1/faldaroja.jpg"/>
-  			 	<img src="img/fotos1/faldarojatras.jpg"/>
-  			 	<img src="img/fotos1/sincara.jpg"/>
-  			 	<img src="img/fotos1/vestidonena.jpg"/>		
-			</div>
+			
 
 		<ul class= "categorias-nuestrostrabajos">
 			<li>Alta costura</li>
+
+
+
 			<li>Uniformes de trabajo</li>
+
+
 			<li>Trajes para eventos</li>
-			<li>Buzos de egresados</li>
-			<li>Ropa Sport</li>
-			<li>Prendas con serigrafía</li>
-			<li>Línea Hogar
+
+			<li>Buzos de egresados
+
+
+
+
+
+			</li>
+
+			<li>Ropa Sport
+
 
 				<div class="fotorama"
     				 data-auto="false">
- 			 		<img src="fotos Soles/toalla.jpg"/>
-  			 		<img src="fotos Soles/sabanasositos.jpg"/>
-  			 		<img src="fotos Soles/sabanasositos.jpg"/>
-  			 		<img src="fotos Soles/mantelblanco.jpg"/>		
+ 			 		
+  			 	
+
 				</div>
 
 
 
 
+			</li>
+			
+			<li>Línea Hogar
 
+				<div class="fotorama"
+    				 data-auto="false">
+ 			 		<img src="fotos Soles/toalla.jpg"/>
+  			 		<img src="fotos Soles/sabanaositos.jpg"/>
+  			 		<img src="fotos Soles/sabanasositos.jpg"/>
+  			 		<img src="fotos Soles/mantelblanco.jpg"/>
+  			 		<img src="fotos Soles/mantaverde.jpg"/>
+  			 		<img src="fotos Soles/sabanaanimalprint.jpg"/>	
 
+				</div>
 
 
 			</li>
@@ -135,7 +154,7 @@
 			<input type="reset" value="Cancelar">
 
 			<div class="vcard">
-				<p> class="fn" title="Información de contacto Soles del Pedemonte">
+				<p> <a class="fn" title="Información de contacto Soles del Pedemonte"></a>
 				<span class="organization-name">Soles de Pedemonte</span>
 				</p>
 				<span class="tel">Teléfono: <span class="value">+54296149832489342</span></span>
