--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@
  			 		<img src="fotos Soles/faldarojatrasjpg"/>
   			 		<img src="fotos Soles/faldarojadelante.jpg"/>
   			 		<img src="fotos Soles/faldazul2.jpg"/>
+  			 		<img src="fotos Soles/vestidonena.jpg"/>
+  			 		<img src="fotos Soles/vestidonena2.jpg"/>
 	
 			</div>
 
