--- a/index.html
+++ b/index.html
@@ -45,23 +45,22 @@
 					
 					El taller "Soles del Piedemonte" es un grupo de personas especialistas en costura, que se dedica a la confección y arreglos de prendas en general. Sus trabajos incluyen ropa para bebés, niños, adultos y además indumentaria de trabajo, prendas de uso diario y ropa de alta costura.
 
-
-
 				</p>					
 			</div>	
-			
-			<div class="mision"> 
-				<h2>Misión</h2>
+
+			<div class="origenes">
+				<h2>Orígenes </h2>
+
 				<p>
-					Este curso y emprendimiento está pensado y orientado en aquellas madres y jóvenes adolescentes. El principal objetivo es poder ayudar y brindar un futuro mejor a través de una profesión como es la costura y además que se transmitan los valores del esfuerzo y de la solidaridad.
-				</p>
-			</div>	
-			<div class="vision">
-				<h2>Visión</h2>
-				<p>
-					La visión es jsdna sodñendpscmspdmaslkdsadkdkasdasddakd dd d d wjdwkñdqdwdjwdqw
+					Todo inició con el curso gratuito de costura "Soles del Oeste" en el año 2004 integrado por un grupo reducido de mamás adolescentes. Junto con la profesora Adriana Gómez, las mamás emprendieron el curso con escasos materiales de trabajo (dos máquinas) pero con un entusiasmo que creció con cada amanecer.
+					Al principio utilizaron prendas para reciclarlas o arreglarlas. Pero luego con el correr del tiempo y con el apoyo de la Municipalidad de la Ciudad de Mendoza, “Soles del Oeste” pudo obtener recursos como máquinas, telas, accesorios de mercería y otras materias primas. Así, las mamás pudieron empezar a confeccionar sus propios diseños.
+					Gracias a la difusión de boca en boca, las personas se fueron enterando de la existencia del curso gratuito. Las cursantes entendieron que de esta manera podían aprender una profesión y a crear su propio negocio como modistas.
+					Este ultimo año el curso convoco a 5 chicas para emprender un nuevo proyecto llamado "Soles del Piedemonte". El desafío que este emprendimiento demandaba era digno de estas chicas. Por eso hoy por hoy “Soles del Piedemonte” se ha afianzado gracias a la voluntad y el trabajo de las chicas, que a base de esfuerzo buscan la mejor calidad de sus productos pero por sobretodo un mejor futuro.
+
 				</p>
 			</div>
+			
+
 				 
 		</article>
 
@@ -71,19 +70,25 @@
 		<h1>Nuestra Historia</h1>
 		<ul class= "info-nuestrahistoria">
 			
-			<div class="origenes">
-				<h2>Orígenes </h2>
+
+			
+			<div class= "Participaciones">
+				<h2>Participaciones</h2>
 
 				<p>
-					Todo inició con el curso gratuito de costura "Soles del Oeste", que comenzó en el año 2004 integrado por un grupo reducido de mamás adolescentes. Junto con la profesora Adriana Gómez, las mamás emprendieron el curso con escasos materiales de trabajo (solamente dos máquinas) pero con un entusiasmo que creció con cada amanecer.
-					Debido al limitado recurso que había, los primeros pasos de las cursantes fue utilizar prendas para reciclarlas o arreglarlas. Pero luego con el correr del tiempo y con el apoyo de la Municipalidad de la Ciudad de Mendoza, “Soles del Oeste” pudo obtener más recursos como máquinas, telas, accesorios de mercería y otras materias primas. Así, las mamás pudieron empezar a confeccionar sus propios diseños.
-					Gracias a la difusión de boca en boca, las personas se fueron enterando de la existencia del curso gratuito y que convocaba a chicas de diferentes edades. Las cursantes entendieron que de esta manera podían aprender una profesión y a crear su propio negocio como modistas.
-					Este ultimo año el curso convoco a 5 chicas para emprender un nuevo proyecto llamado "Soles del Piedemonte". El desafío que este emprendimiento demandaba era digno de estas chicas, ya que su alta experiencia con la costura y el trabajo era muy bueno para este proyecto. Por eso hoy por hoy “Soles del Piedemonte” se ha afianzado gracias a la voluntad y el trabajo de las chicas, que a base de esfuerzo buscan la mejor calidad de sus productos pero por sobretodo un mejor futuro.
 
 				</p>
 			</div>
-			<li>Participaciones</li>
-			<li>Formación profesional</li>
+
+			<div class= "Formacionprofesional">
+				<h2>Formación profesional</h2>
+
+				<p>
+
+				</p>
+			</div>
+
+
 		</ul>
 
 		<img src="fotos Soles/adriana.jpg" alt="Adriana expositora"border="0" height="150" width="200"/>
