--- a/index.html
+++ b/index.html
@@ -75,9 +75,17 @@
 			<div class= "Participaciones">
 				<h2>Participaciones</h2>
 
-				<p>
+				<ul>
 
-				</p>
+					<li> Taller de capacitación en metodología GRAMEEN,"DESARROLLO DE NEGOCIOS Y HABILIDADES SOCIALES" 2004 </li>
+
+					<li> Jornada de "DISEÑO, MARKETING Y ESTRATEGIAS DE COMERCIALIZACIÓN" 2005 y 2006 </li>
+
+					<li> Proyecto "FORTALECIMIENTO DE LA GESTIÓN DE LOS MICROEMPRENDEDORES" beneficiarios del programa MANOS A LA OBRA 2006 </li>
+
+					<li> Proyecto de capacitación: "LÍDERES COMUNITARIOS DE LA SOCIEDAD CIVIL" 2006 Y 2007; certificado de: "COORDINADORA" 2010</li>
+
+				</ul>
 			</div>
 
 			<div class= "Formacionprofesional">
