--- a/index.html
+++ b/index.html
@@ -93,7 +93,20 @@
 
 				<p>
 
+					<li> NOMBRE Y APELLIDO: Adriana Isabel Gómez </li>
+
+					<li> PROFESIÓN: Profesora de Corte y Confección; Coordinadora del Taller “Soles del Piedemonte” </li>
+
+					<li> LUGAR DE NACIMIENTO: BUENOS AIRES, ARGENTINA </li>
+
+					Adriana comenzó con sus estudios de corte y confección a los 13 años, en un curso que se extendió por 3 años. Posteriormente comenzó a trabajar en la fabrica ADIDAS, confeccionando la ropa de deporte para la Selección Argentina en el Mundial de Futbol del año 1978.
+
+					Tras su labor en ADIDAS, Adriana trabajó en distintos talleres de costura y así alcanzó una alta experiencia en el mundo de la moda. Los pasos de la vida la guiaron a Mendoza donde se radicó y donde empezó a construir lo que hoy es el curso y taller "Soles del Oeste" y "Soles del Piedemonte".
+
+					A pesar de estar al frente de sus propios cursos, Adriana siempre continuó capacitándose asistiendo a diversos talleres y cursos de distintas índoles para mejorar y adquirir nuevos conocimientos.
+
 				</p>
+
 			</div>
 
 
