--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
 
 				<p>
 
-					<li> NOMBRE Y APELLIDO: Adriana Isabel Gómez </li>
+					<h2> Adriana Isabel Gómez </h2>
 
-					<li> PROFESIÓN: Profesora de Corte y Confección; Coordinadora del Taller “Soles del Piedemonte” </li>
+					<li> Profesora de Corte y Confección; Coordinadora del Taller “Soles del Piedemonte” </li>
 
-					<li> LUGAR DE NACIMIENTO: BUENOS AIRES, ARGENTINA </li>
+					
 
 					Adriana comenzó con sus estudios de corte y confección a los 13 años, en un curso que se extendió por 3 años. Posteriormente comenzó a trabajar en la fabrica ADIDAS, confeccionando la ropa de deporte para la Selección Argentina en el Mundial de Futbol del año 1978.
 
@@ -141,16 +141,16 @@
 
 			<div class="fotorama" id="fotorama2"
     				 data-auto="false">
- 			 		<img src="fotos Soles reducidas/camisacocinero (Copiar).png"/>
+ 			 		<img src="cambiadas/camisacocinero (Copiar) (Copiar).png"/>
  			 		<img src="fotos Soles reducidas/lompa (Copiar).png"/>
   			 			
 			
 			</div>
 			<div class="fotorama" id="fotorama3"
     				 data-auto="false">
- 			 		<img src="fotos Soles reducidas/faldarojatras (Copiar).png"/>
-  			 		<img src="fotos Soles reducidas/faldarojadelante (Copiar).png"/>
-  			 		<img src="fotos Soles reducidas/faldazul2 (Copiar).png"/>
+ 			 		<img src="cambiadas/faldarojatras (Copiar) (Copiar).png"/>
+  			 		<img src="cambiadas/faldarojadelante (Copiar) (Copiar).png"/>
+  			 		<img src="cambiadas/faldazul2 (Copiar) (Copiar).png"/>
   			 		<img src="fotos Soles reducidas/vestidonena (Copiar).png"/>
   			 		<img src="fotos Soles reducidas/vestidonena2 (Copiar).png"/>
 	
@@ -160,7 +160,7 @@
     				 data-auto="false">
                     <img src="fotos Sole reducidas/sincara (Copiar).png"/>
   			 		<img src="fotos Soles reducidas/buzopromocion (Copiar).png"/>
-  			 		<img src="fotos Soles reducidas/buzopromocion2 (Copiar).png"/>
+  			 		<img src="cambiadas/buzopromocion2 (Copiar) (Copiar).png"/>
   			 		<img src="fotos Soles reducidas/bordado (Copiar).png"/>
   			 		<img src="fotos Soles reducidas/buzoblanco2 (Copiar).png"/>		
 
