cambio de tipo de tipografía

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta charset="UTF-8">
 		<title>Soles del piedemonte</title>
 		<link rel="stylesheet" type="text/css" href="css/styles.css" media="screen">
+		<link href='http://fonts.googleapis.com/css?family=Droid+Serif:400italic' rel='stylesheet' type='text/css'>
 	</head>
 
 	<header>
@@ -40,12 +41,10 @@
 		<article class="seccion-inicio">
 			<div class="descripcion"> 
 				<br>
-				<h2> Descripción de la empresa </h2>
-				<p>
-					
+				<h2> 
 					El taller "Soles del Piedemonte" es un grupo de personas especialistas en costura, que se dedica a la confección y arreglos de prendas en general. Sus trabajos incluyen ropa para bebés, niños, adultos y además indumentaria de trabajo, prendas de uso diario y ropa de alta costura.
-
-				</p>					
+				 </h2>
+								
 			</div>	
 
 			<div class="origenes">
