--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
 			
 			<div class= "Participaciones">
 				<h2>Participaciones</h2>
+				<p>
+					El taller "Soles del Piedemonte" y el curso "Soles del Oeste" han participado de diferentes actividades curriculares. Entra ellas se destacan exposiciones en el Parque Central, el evento Música Clásica por los Caminos del Vino, la Peatonal del Vino, la Feria de Logros en el espacio cultural Julio Le Parc y diversos eventos realizados en la Plaza Independencia. 
+
+				</p>
 
 				<ul>
 
@@ -95,9 +99,9 @@
 
 					<h2> Adriana Isabel Gómez </h2>
 
-					<li> Profesora de Corte y Confección; Coordinadora del Taller “Soles del Piedemonte” </li>
+					<h3> Profesora de Corte y Confección; Coordinadora del Taller “Soles del Piedemonte” </h3>
 
-					
+					<br>
 
 					Adriana comenzó con sus estudios de corte y confección a los 13 años, en un curso que se extendió por 3 años. Posteriormente comenzó a trabajar en la fabrica ADIDAS, confeccionando la ropa de deporte para la Selección Argentina en el Mundial de Futbol del año 1978.
 
@@ -221,11 +225,11 @@
 
 			<div class="vcard">
 				<p> <a class="fn" title="Información de contacto Soles del Pedemonte"></a>
-				<span class="organization-name">Soles de Pedemonte</span>
+				<span class="organization-name">Soles de Piedemonte</span>
 				</p>
 				<span class="tel">Teléfono: <span class="value">+54296149832489342</span></span>
 				<br>
-				<span class="email"> Email: <span class="value">solesdepedemonte@gmail.com</span></span>
+				<span class="email"> Email: <span class="value">solesdepiedemonte@gmail.com</span></span>
 				<br>
 				<a class="location url" href="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d214331.5185097047!2d-68.81377905!3d-32.92644824999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2sar!4v1411529009965"></a>
 			</div>
