--- a/index.html
+++ b/index.html
@@ -77,17 +77,7 @@
 
 				</p>
 
-				<ul>
 
-					<li> Taller de capacitación en metodología GRAMEEN,"DESARROLLO DE NEGOCIOS Y HABILIDADES SOCIALES" 2004 </li>
-
-					<li> Jornada de "DISEÑO, MARKETING Y ESTRATEGIAS DE COMERCIALIZACIÓN" 2005 y 2006 </li>
-
-					<li> Proyecto "FORTALECIMIENTO DE LA GESTIÓN DE LOS MICROEMPRENDEDORES" beneficiarios del programa MANOS A LA OBRA 2006 </li>
-
-					<li> Proyecto de capacitación: "LÍDERES COMUNITARIOS DE LA SOCIEDAD CIVIL" 2006 Y 2007; certificado de: "COORDINADORA" 2010</li>
-
-				</ul>
 			</div>
 
 			<div class= "Formacionprofesional">
@@ -106,6 +96,21 @@
 					Tras su labor en ADIDAS, Adriana trabajó en distintos talleres de costura y así alcanzó una alta experiencia en el mundo de la moda. Los pasos de la vida la guiaron a Mendoza donde se radicó y donde empezó a construir lo que hoy es el curso y taller "Soles del Oeste" y "Soles del Piedemonte".
 
 					A pesar de estar al frente de sus propios cursos, Adriana siempre continuó capacitándose asistiendo a diversos talleres y cursos de distintas índoles para mejorar y adquirir nuevos conocimientos.
+
+					Algunos de esos cursos que concretó son:
+
+					
+				<ul>
+
+					<li> Taller de capacitación en metodología GRAMEEN,"DESARROLLO DE NEGOCIOS Y HABILIDADES SOCIALES" 2004 </li>
+
+					<li> Jornada de "DISEÑO, MARKETING Y ESTRATEGIAS DE COMERCIALIZACIÓN" 2005 y 2006 </li>
+
+					<li> Proyecto "FORTALECIMIENTO DE LA GESTIÓN DE LOS MICROEMPRENDEDORES" beneficiarios del programa MANOS A LA OBRA 2006 </li>
+
+					<li> Proyecto de capacitación: "LÍDERES COMUNITARIOS DE LA SOCIEDAD CIVIL" 2006 Y 2007; certificado de: "COORDINADORA" 2010</li>
+
+				</ul>
 
 				</p>
 
