--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
 					Algunos de esos cursos que concretó son:
 
-					
+
 				<ul>
 
 					<li> Taller de capacitación en metodología GRAMEEN,"DESARROLLO DE NEGOCIOS Y HABILIDADES SOCIALES" 2004 </li>
@@ -119,9 +119,11 @@
 
 		</ul>
 
+		<div class="fotoshistoria">
 		<img src="fotos Soles/adriana.jpg" alt="Adriana expositora"border="0" height="150" width="200"/>
 		<img src="fotos Soles/adrianaconreina.jpg" alt="Adriana con reina"border="0" height="150" width="200"/>
 		<img src="fotos Soles/adrianaconsr.jpg" alt="Intendente"border="0" height="150" width="200"/>
+		</div>
 
 	</section>
 
