ajustando html para q tome los cambios de css

--- a/index.html
+++ b/index.html
@@ -40,18 +40,19 @@
 	<section id="inicio" class="slide inicio">
 		<article class="seccion-inicio">
 			<div class="descripcion"> 
-				<h2> 
+				<p> 
 					El taller "Soles del Piedemonte" es un grupo de personas especialistas en costura, que se dedica a la confección y arreglos de prendas en general. Sus trabajos incluyen ropa para bebés, niños, adultos y además indumentaria de trabajo, prendas de uso diario y ropa de alta costura.
-				 </h2>
+				 </p>
 								
 			</div>	
 
 			<div class="origenes">
 				<h2>Orígenes </h2>
 
-				<p>
+				<p class="origenizquierdo">
 					Todo inició con el curso gratuito de costura "Soles del Oeste" en el año 2004 integrado por un grupo reducido de mamás adolescentes. Junto con la profesora Adriana Gómez, las mamás emprendieron el curso con escasos materiales de trabajo (dos máquinas) pero con un entusiasmo que creció con cada amanecer.
-					Al principio utilizaron prendas para reciclarlas o arreglarlas. Pero luego con el correr del tiempo y con el apoyo de la Municipalidad de la Ciudad de Mendoza, “Soles del Oeste” pudo obtener recursos como máquinas, telas, accesorios de mercería y otras materias primas. Así, las mamás pudieron empezar a confeccionar sus propios diseños.
+					Al principio utilizaron prendas para reciclarlas o arreglarlas. Pero luego con el correr del tiempo y con el apoyo de la Municipalidad de la Ciudad de Mendoza, “Soles del Oeste” pudo obtener recursos como máquinas, telas, accesorios de mercería y otras materias primas. Así, las mamás pudieron empezar a confeccionar sus propios diseños.</p>
+				<p class="origenderecho">	
 					Gracias a la difusión de boca en boca, las personas se fueron enterando de la existencia del curso gratuito. Las cursantes entendieron que de esta manera podían aprender una profesión y a crear su propio negocio como modistas.
 					Este ultimo año el curso convoco a 5 chicas para emprender un nuevo proyecto llamado "Soles del Piedemonte". El desafío que este emprendimiento demandaba era digno de estas chicas. Por eso hoy por hoy “Soles del Piedemonte” se ha afianzado gracias a la voluntad y el trabajo de las chicas, que a base de esfuerzo buscan la mejor calidad de sus productos pero por sobretodo un mejor futuro.
 
